# rsomics-permanova

./: Cargo.toml  README.md
benches/: bench.rs
src/: cli.rs  dm.rs  grouping.rs  lib.rs  main.rs  rng.rs
tests/: compat.rs  oracle_skbio.py
tests/golden/: dm_asymmetric.tsv  dm_nonhollow.tsv  dm_small.tsv  dm_three.tsv  groups_small.tsv  groups_three.tsv  groups_tiny.tsv  result_small.skbio.tsv  result_small_p0.skbio.tsv  result_three.skbio.tsv
