[package]
name = "rsomics-permanova"
version = "0.1.3"
description = "PERMANOVA (Anderson 2001) — pseudo-F test for group differences from a distance matrix, with a permutation p-value; scikit-bio skbio.stats.distance.permanova equivalent"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-world"
authors = ["Zane Leong <efd@live.com>"]

[[bin]]
name = "rsomics-permanova"
path = "src/main.rs"

[lib]
name = "rsomics_permanova"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = { version = "0.6" }
rsomics-distance = { version = "0.1" }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }
rayon = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "bench"
harness = false
